<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 Peter Gregus for GravityBox Project (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="pref_cat_lockscreen"
        android:title="@string/pref_cat_lockscreen_title"
        android:summary="@string/pref_cat_lockscreen_summary">

        <PreferenceCategory
            android:key="pref_cat_lockscreen_background"
            android:title="@string/pref_cat_lockscreen_background_title">

            <ListPreference
                android:key="pref_lockscreen_background"
                android:title="@string/pref_lockscreen_background_title"
                android:entries="@array/lockscreen_bg_entries"
                android:entryValues="@array/lockscreen_bg_values"
                android:defaultValue="default"
                android:order="1" />

            <net.margaritov.preference.colorpicker.ColorPickerPreference 
                android:key="pref_lockscreen_bg_color"
                android:title="@string/pref_lockscreen_bg_color_title"
                android:summary="@string/pref_lockscreen_bg_color_summary"
                android:defaultValue="@integer/COLOR_BLACK"
                android:order="2" />

            <Preference
                android:key="pref_lockscreen_bg_image"
                android:title="@string/pref_lockscreen_bg_image_title"
                android:summary="@string/pref_lockscreen_bg_image_summary"
                android:order="3" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_about"
        android:title="@string/pref_cat_about_title">

        <Preference
            android:key="pref_about_xlb"
            android:summary="@string/about_xlb_summary" />

        <Preference
            android:key="pref_about_gb"
            android:title="@string/about_gb_title"
            android:summary="@string/about_gb_summary" />

        <Preference
            android:key="pref_about_xposed"
            android:title="@string/about_xposed_title"
            android:summary="@string/about_xposed_summary" />"

        <Preference
            android:key="pref_about_donate"
            android:title="@string/about_donate_title"
            android:summary="@string/about_donate_summary" />

        <CheckBoxPreference
            android:key="pref_gb_theme_dark"
            android:title="@string/pref_gb_theme_dark_title"
            android:summary="@string/pref_gb_theme_dark_summary"
            android:persistent="false"
            android:defaultValue="false" />

    </PreferenceScreen>

</PreferenceScreen>
